--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aleo-starter-template",
+  "name": "aleo-starter-template-adapters",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -13,8 +13,6 @@
   },
   "dependencies": {
     "@provablehq/sdk": "^0.8.7",
-    "@puzzlehq/sdk": "^1.0.3",
-    "@puzzlehq/sdk-core": "^1.0.3",
     "aleo-adapters": "^1.2.1",
     "aleo-hooks": "^1.0.3",
     "comlink": "^4.4.2",
